--- a/first/templates/enroll.html
+++ b/first/templates/enroll.html
@@ -59,7 +59,7 @@
                     {% endif %}
     
                     
-                    <li><a href="">상품등록</a></li>
+                    <li><a href="{% url 'upload' %}">상품등록</a></li>
                     <li><a href="">상품페이지</a></li>
             </ul>
         </nav>
