--- a/first/templates/home.html
+++ b/first/templates/home.html
@@ -62,8 +62,8 @@
                 {% endfor %}
                 {% endif %}
 
-                <li><a href="">상품등록</a></li>
-                <li><a href="">상품페이지</a></li>
+                <li><a href="{% url 'upload' %}">상품등록</a></li>
+                <li><a href="{% url 'list' %}">상품페이지</a></li>
             </ul>
         </nav>
     </header>
