--- a/first/templates/login.html
+++ b/first/templates/login.html
@@ -59,7 +59,7 @@
                     {% else %}
                     <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
                     <li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
-                    <li><a href="">작가페이지</a></li>
+                    <li><a href="{% url 'upload' %}">작가페이지</a></li>
                     {% endif %}
     
                     
