--- a/photographer/templates/list.html
+++ b/photographer/templates/list.html
@@ -47,15 +47,20 @@
         <h1 class='logo'><a href={% url 'home' %}>찍사</a></h1>
         <nav id="nav">
             <ul>
-                <li><a href="{% url 'list' %}">모든상품</a></li>
-                <li><a href="{% url 'bestphoto' %}">이달의 사진</a></li>
-                <li><a href="{% url 'recommend' %}">추천여행지</a></li>
-                <li><a href="{% url 'enroll' %}">작가 등록하기</a></li>
+                <li><a href="">모든상품</a></li>
+                <li><a href="">이달의 사진</a></li>
+                <li><a href="">추천여행지</a></li>
+                {% if not user.is_authenticated %}  
                 <li><a href="{% url 'login' %}">로그인/가입</a></li>
-                <li><a href="{% url 'mypage' %}">마이페이지</a></li>
-                <li><a href="{% url 'photographer' %}">작가페이지</a></li>
-                <li><a href="{% url 'upload' %}">상품등록</a></li>
-                <li><a href="{% url 'product' %}">상품페이지</a></li>
+                {% else %}
+                <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
+                <li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
+                <li><a href="">작가페이지</a></li>
+                {% endif %}
+
+                
+                <li><a href="">상품등록</a></li>
+                <li><a href="">상품페이지</a></li>
             </ul>
         </nav>
     </header>
@@ -94,6 +99,43 @@
     </div>
 
 
+  
+            {% for product in posts %}
+
+            <div class="col-md-4">
+                <div class="card" style="margin-top:2rem;width: 18rem;">
+                    <img src="{% static 'images/pic01.jpg' %}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="">
+                            <h5 class="card-title">상품 제목:{{product.title}}</h5>
+                        </a>
+                        <p class="card-text">
+                           상품요약:{{product.summary}}
+                        </p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">작가:{{product.user.name}}</li>
+                        <li class="list-group-item">가격대:{{product.option_price}} ~</li>
+                        <li class="list-group-item">평점및리뷰수</li>
+                    </ul>
+
+                </div>
+            </div>
+            {% endfor %}
+            {% if posts.has_previous %}
+             <a href="?page=1">First</a>
+            <a href="?page={{posts.previous_page_number}}">Previous</a>
+            {% endif %}
+          
+            <span>{{posts.number}}</span>
+            <span>of</span>
+            <span>{{posts.paginator.num_pages}}</span>
+          
+            {% if posts.has_next %}
+        <a href="?page={{posts.next_page_number}}">Next</a>
+          <a href="?page={{posts.paginator.num_pages}}">Last</a>
+            {% endif %}
+<!--   
     <div class="goods">
         <div class="row">
             <div class="col-md-4">
@@ -134,25 +176,6 @@
 
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card" style="margin-top:2rem;width: 18rem;">
-                    <img src="{% static 'images/pic01.jpg' %}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <a href="">
-                            <h5 class="card-title">상품 제목</h5>
-                        </a>
-                        <p class="card-text">
-                            상품요약
-                        </p>
-                    </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">작가</li>
-                        <li class="list-group-item">가격대~</li>
-                        <li class="list-group-item">평점및리뷰수</li>
-                    </ul>
-
-                </div>
-            </div>
         </div>
         <div class="row">
             <div class="col-md-4">
@@ -272,7 +295,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="map">
         지도
