--- a/first/templates/home.html
+++ b/first/templates/home.html
@@ -49,9 +49,9 @@
         <nav id="nav">
             <ul>
                 
-                <li><a href="">모든상품</a></li>
-                <li><a href="">이달의 사진</a></li>
-                <li><a href="">추천여행지</a></li>
+                <li><a href="{% url 'list' %}">모든상품</a></li>
+                <li><a href="{% url 'bestphoto' %}">이달의 사진</a></li>
+                <li><a href="{% url 'recommend' %}">추천여행지</a></li>
                 {% if not user.is_authenticated %}  
                 <li><a href="{% url 'login' %}">로그인/가입</a></li>
                 {% else %}
@@ -63,7 +63,6 @@
                 {% endif %}
 
                 <li><a href="{% url 'upload' %}">상품등록</a></li>
-                <li><a href="{% url 'list' %}">상품페이지</a></li>
             </ul>
         </nav>
     </header>
