--- a/mypage/templates/mypage.html
+++ b/mypage/templates/mypage.html
@@ -47,20 +47,19 @@
 		<h1 class='logo'><a href="{% url 'home' %}">찍사</a></h1>
 		<nav id="nav">
 			<ul>
-				<li><a href="">모든상품</a></li>
-                <li><a href="">이달의 사진</a></li>
-                <li><a href="">추천여행지</a></li>
+				<li><a href="{% url 'list' %}">모든상품</a></li>
+                <li><a href="{% url 'bestphoto' %}">이달의 사진</a></li>
+                <li><a href="{% url 'recommend' %}">추천여행지</a></li>
                 {% if not user.is_authenticated %}  
                 <li><a href="{% url 'login' %}">로그인/가입</a></li>
                 {% else %}
                 <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
 				<li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
-				<li><a href="">작가페이지</a></li>
+				<li><a href="{% url 'photographer' writer.id %}">작가페이지</a></li>
                 {% endif %}
 
                 
-                <li><a href="">상품등록</a></li>
-                <li><a href="">상품페이지</a></li>
+                <li><a href="{% url 'upload' %}">상품등록</a></li>
 			</ul>
 		</nav>
 	</header>
