--- a/first/templates/home.html
+++ b/first/templates/home.html
@@ -49,17 +49,15 @@
         <nav id="nav">
             <ul>
                 
-                <li><a href="">모든상품</a></li>
-                <li><a href="">이달의 사진</a></li>
-                <li><a href="">추천여행지</a></li>
+                <li><a href="{% url 'list' %}">모든상품</a></li>
+                <li><a href="{% url 'bestphoto' %}" >이달의 사진</a></li>
+                <li><a href="{% url 'recommend'recommend %}">추천여행지</a></li>
                 {% if not user.is_authenticated %}  
-                <li><a href="{% url 'login' %}">로그인/가입</a></li>
+                <li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
                 {% else %}
                 <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
                 <li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
-                {% for writer in writers %}
-                <li><a href="{% url 'photographer' writer.id %}">작가페이지</a></li>
-                {% endfor %}
+           
                 {% endif %}
 
                 <li><a href="{% url 'upload' %}">상품등록</a></li>
@@ -93,7 +91,7 @@
             <div class="row">
                 <div class="6u">
                     <section class="special">
-                        <a href="#" class="image fit"><img src="{% static 'images/pic01.jpg' %}" alt="" /></a>
+                        <a href="{% url 'bestphoto' %}" class="image fit"><img src="{% static 'images/pic01.jpg' %}" alt="" /></a>
                         <h3>이달의 사진</h3>
                         <p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing
                             cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam
@@ -106,7 +104,7 @@
                 </div>
                 <div class="6u">
                     <section class="special">
-                        <a href="#" class="image fit"><img src="{% static 'images/pic02.jpg' %}" alt="" /></a>
+                        <a href="{% url 'recommend' %}" class="image fit"><img src="{% static 'images/pic02.jpg' %}" alt="" /></a>
                         <h3>추천 여행지</h3>
                         <p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing
                             cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam
