--- a/photographer/templates/photographeredit.html
+++ b/photographer/templates/photographeredit.html
@@ -44,7 +44,7 @@
 
 	<!-- Header -->
 	<header id="header" class="skel-layers-fixed">
-		<h1 class='logo'><a href="{% url 'home' %}">찍사</a></h1>
+		<h1 class='logo'><a href={% url 'home' %}>찍사</a></h1>
 		<nav id="nav">
 			<ul>
 				<li><a href="{% url 'list' %}">모든상품</a></li>
@@ -64,50 +64,43 @@
 		</nav>
 	</header>
 
-	<!-- Main -->
-	<section id="main" class="wrapper style1">
-		<header class="major">
-			<h1 style="text-align: center; font-size : 4em;">마이페이지</h1>
-		</header>
-		<div class="container">
-			<div class="row">
-				<div class="4u skel-cell-important">
-						{% if user == people %}
-					<section>
-						<h3>안녕하세요 {{user.name}}님</h3>
 
-					</section>
-					<hr />
-					<section>
-						
-				
-						<ul class="alt">
-							<div><a href="" class="button alt" style="width: 100%;">예약상황</a></div>
-							<div><a href="{% url 'history' %}" class="button alt" style="width: 100%;">구매내역</a></div>
-							<div><a href="{% url 'favorite' %}" class="button alt" style="width: 100%;">관심작가</a></div>
-							<div><a href="{% url 'change_user' %}" class="button alt" style="width: 100%;">개인정보수정</a></div>
-							
-							<div><a href="{% url 'delete' user.id %}" class="button alt" style="width: 100%;"  onclick="return confirm('정말 계정을 삭제하시겠습니까?')">회원탈퇴</a></div>
+	<div style="margin-top: 4em;">
+		<h1 style="text-align: center; font-size : 4em;">작가프로필 수정</h1>
+	</div>
 
-						</ul>
-						{% endif %}
-					</section>
+	<!-- Two -->
+	<div id="enroll" class="enroll">
+
+		<div class="login-clean">
+			<form method="post">
+
+				<div class="form-group" style="height: 85px;">
+					<p>프로필 사진</p>
+					<input type="file" />
 				</div>
-				<div class="8u">
-					<section>
-						<div style="border: medium solid #000000;">
-							제목
-						</div>
-						<br>
-						\<div style="border: medium solid #000000; height: 15em;">
-							내용
-						</div>
-					</section>
-				</div>
-			</div>
 
+				<div class="form-group" style="height: 85px;">
+					<p>인스타그램 주소(선택)</p>
+					<input class="form-control" type="url" name="SNS_URL" placeholder="디비에서 가져온값" />
+				</div>
+
+				<div class="form-group" style="height: 200px;">
+					<p>자기소개</p>
+					<h3>에디터가져오기</h3>
+				</div>
+
+				<div class="form-group">
+					<button class="btn btn-primary btn-block" type=" submit">
+						수정하기
+					</button>
+				</div>
+			</form>
 		</div>
-	</section>
+
+	</div>
+
+
 	<!-- Footer -->
 	<footer id="footer">
 		<div class="container">
