--- a/product/templates/product.html
+++ b/product/templates/product.html
@@ -66,7 +66,7 @@
                 <li><a href="{% url 'bestphoto' %}">이달의 사진</a></li>
                 <li><a href="{% url 'recommend' %}">추천여행지</a></li>
                 {% if not user.is_authenticated %}  
-                <li><a href="{% url 'login' %}">로그인/가입</a></li>
+                <li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
                 {% else %}
                 <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
                 <li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
