--- a/photographer/templates/list.html
+++ b/photographer/templates/list.html
@@ -55,7 +55,9 @@
                 {% else %}
                 <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
                 <li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
+                {% for writer in writers %}
                 <li><a href="{% url 'photographer' writer.id %}">작가페이지</a></li>
+                {% endfor %}
                 {% endif %}
 
                 
