--- a/mypage/templates/history.html
+++ b/mypage/templates/history.html
@@ -49,7 +49,7 @@
 			<ul>
 				<li><a href="{% url 'list' %}">모든상품</a></li>
                 <li><a href="{% url 'bestphoto' %}" >이달의 사진</a></li>
-                <li><a href="{% url 'recommend'recommend %}">추천여행지</a></li>
+                <li><a href="{% url 'recommend' %}">추천여행지</a></li>
                 {% if not user.is_authenticated %}  
                 <li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
                 {% else %}
