--- a/photographer/templates/upload.html
+++ b/photographer/templates/upload.html
@@ -44,21 +44,26 @@
 
     <!-- Header -->
     <header id="header" class="skel-layers-fixed">
-		<h1 class='logo'><a href="{% url 'home' %}">찍사</a></h1>
+        <h1 class='logo'><a href="{% url 'home' %}">찍사</a></h1>
         <nav id="nav">
             <ul>
+
                 <li><a href="{% url 'list' %}">모든상품</a></li>
                 <li><a href="{% url 'bestphoto' %}">이달의 사진</a></li>
                 <li><a href="{% url 'recommend' %}">추천여행지</a></li>
-                {% if not user.is_authenticated %}  
+                {% if not user.is_authenticated %}
                 <li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
                 {% else %}
                 <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
                 <li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
-                {% for writer in writers %}
-                <li><a href="{% url 'photographer' writer.id %}">작가페이지</a></li>
-                {% endfor %}
+                <li>
+                    <a href="javascript:{document.getElementById('logout').submit()}">Logout</a>
+                    <form style="height: 100px;" id="logout" method="POST" action="{% url 'signout' %}">
+                        {% csrf_token %} <input type="hidden" />
+                    </form>
+                </li>
                 {% endif %}
+                <li><a href="{% url 'upload' %}">상품등록</a></li>
             </ul>
         </nav>
     </header>
