--- a/photographer/templates/list.html
+++ b/photographer/templates/list.html
@@ -90,11 +90,11 @@
                 </div>
                 <div class="custom-control custom-radio custom-control-inline">
                     <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
-                    <label class="custom-control-label" for="customRadioInline2">가격순</label>
+                    <label class="custom-control-label" for="customRadioInline2">낮은 가격순</label>
                 </div>
                 <div class="custom-control custom-radio custom-control-inline">
                     <input type="radio" id="customRadioInline3" name="customRadioInline1" class="custom-control-input">
-                    <label class="custom-control-label" for="customRadioInline3">평점순</label>
+                    <label class="custom-control-label" for="customRadioInline3">높은 평점순</label>
                 </div>
             </div>
 
