--- a/first/templates/customer_login.html
+++ b/first/templates/customer_login.html
@@ -79,10 +79,11 @@
     </div>
 
     <!-- Two -->
-    <form method="POST" action="{% url 'customer_login' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <!--  
+    <div id="login" class="login">
+        <form method="POST" action="{% url 'customer_login' %}">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <!--  
     <div id="login" class="login">
         <div class="form-group" style="height: 85px;">
             <p>ID</p>
@@ -95,17 +96,17 @@
             <input class="form-control" type="text" name="eqip" placeholder="비밀번호" />
         </div>
         -->
-        <div class="form-group">
-            <button class="btn btn-primary btn-block" type=" submit">
-                로그인
-            </button>
-        </div>
-    </form>
-    <div class="form-group" style="text-align: center">
-        <div><a href="{% url 'join' %}">회원가입</a></div>
-        <div><a href="{% url 'id_find' %}"> ID찾기</a><a href=""> PW찾기</a></div>
+            <div class="form-group">
+                <button class="btn btn-primary btn-block" type=" submit">
+                    로그인
+                </button>
+            </div>
+        </form>
+        <div class="form-group" style="text-align: center">
+            <div><a href="{% url 'join' %}">회원가입</a></div>
+            <div><a href="{% url 'id_find' %}"> ID찾기</a><a href=""> PW찾기</a></div>
 
-    </div>
+        </div>
     </div>
 
 
