--- a/product/templates/product.html
+++ b/product/templates/product.html
@@ -63,20 +63,19 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="{% url 'list' %}">모든상품</a></li>
-                <li><a href="{% url 'bestphoto' %}">이달의 사진</a></li>
-                <li><a href="{% url 'recommend' %}">추천여행지</a></li>
-                {% if not user.is_authenticated %}  
-                <li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
-                {% else %}
-                <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
-                <li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
-                <li><a href="{% url 'photographer' writer.id %}">작가페이지</a></li>
-                {% endif %}
+				<li><a href="{% url 'bestphoto' %}">이달의 사진</a></li>
+				<li><a href="{% url 'recommend' %}">추천여행지</a></li>
+				{% if not user.is_authenticated %}
+				<li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
+				{% else %}
+				<li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
+				<li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
+				<li><a href="{% url 'photographer' writer.id %}">작가페이지</a></li>
+				{% endif %}
 				<li><a href="{% url 'upload' %}">상품등록</a></li>
 			</ul>
 		</nav>
 	</header>
-
 	<!-- Main -->
 	<section id="main" class="wrapper style1">
 		<header class="major">
@@ -103,7 +102,7 @@
 										<img src="{% static 'images/pic02.jpg' %}" class="d-block w-100" alt="...">
 									</div>
 									<div class="carousel-item">
-										<img src="{% static 'images/pic03.jpg' %}" class="d-block w-100" alt="...">
+										<img src="{% static 'images/pic016.jpg' %}" class="d-block w-100" alt="...">
 									</div>
 								</div>
 								<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -153,14 +152,16 @@
 								</div>
 							</li>
 						</ol>
+						<hr class="major" />
+						<div style="width: 50em; height: 20em; border:medium solid #000000;"> 지도</div>
 					</section>
 				</div>
 				<div class="4u">
 					<section>
 						<section>
-							<img class="personphoto" height="40%" width="40%" src="{% static 'images/pic01.jpg' %}"
+							<img class="personphoto" height="40%" width="40%" src="{% static 'images/pic014.jpg' %}"
 								alt="">
-							<span style="font-size : 2em; margin-left:1em;">000작가</span>
+							<span style="font-size : 2em; margin-left:1em;">공필상작가</span>
 
 							<div style="text-align: right"><a href="#" class="button alt">작가페이지</a></div>
 
@@ -171,7 +172,8 @@
 						<div class="form-group">
 							<form id="reserve">
 								<h3>옵션</h3>
-								<select name="option">
+
+								<select class="productoption" name="option">
 									<option value="option1">옵션1</option>
 									<option value="option2">옵션2</option>
 									<option value="option3">옵션3</option>
@@ -182,42 +184,50 @@
 
 								<h3>시간:</h3>
 								<p><input type="text" placeholder="원하는 시간대 입력"></p>
-
-								<div><input type="submit" value="예약신청"></div>
+								<div style="text-align: end">
+									<input type="submit" class="btn btn-dark" value="예약신청"></<input>
+								</div>
+								<a href="">상담하기</a>
 							</form>
+							<a style="margin-top: 5em;" class=" btn btn-primary" href="{% url 'productedit' %}">상품수정</a>
+							<a style="margin-top: 5em;" class=" btn btn-danger" href="{% url 'productedit' %}">상품삭제</a>
+
 						</div>
 					</section>
 				</div>
+
 			</div>
+
 			<hr class="major" />
-			<div class="row">
-				<div class="6u">
-					<section class="special">
-						<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-						<h3>Mollis adipiscing nisl</h3>
-						<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing
-							cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam
-							arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam
-							lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button alt">Learn More</a></li>
-						</ul>
-					</section>
-				</div>
-				<div class="6u">
-					<section class="special">
-						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-						<h3>Neque ornare adipiscing</h3>
-						<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing
-							cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam
-							arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam
-							lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button alt">Learn More</a></li>
-						</ul>
-					</section>
-				</div>
-			</div>
+			<h2>후기</h2>
+			<br>
+			<ul class="list-unstyled">
+				<li class="media">
+					<div class="media-body">
+						<h5 class="mt-0 mb-1">실제이용자</h5>
+						Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+						purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+						vulputate fringilla. Donec lacinia congue felis in faucibus.
+					</div>
+				</li>
+				<li class="media my-4">
+					<div class="media-body">
+						<h5 class="mt-0 mb-1">실제이용자</h5>
+						Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+						purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+						vulputate fringilla. Donec lacinia congue felis in faucibus.
+					</div>
+				</li>
+				<li class="media">
+					<div class="media-body">
+						<h5 class="mt-0 mb-1">실제이용자</h5>
+						Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+						purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+						vulputate fringilla. Donec lacinia congue felis in faucibus.
+					</div>
+				</li>
+			</ul>
+
 		</div>
 	</section>
 
