--- a/first/templates/home.html
+++ b/first/templates/home.html
@@ -82,7 +82,7 @@
                     <option value="hash">해시태그</option>
                 </select>
                 <input type="text" class="form-control" id="email" placeholder="검색어를 입력해주세요" name="email" required="">
-                <button type="submit" class="btn btn-default">검색</button>
+                <button type="submit" class="btn btn-default"><a href="{% url 'haystack_search' %}">검색</a></button>
             </form>
         </div>
     </section>
